--- a/themes/kale/layouts/partials/header.html
+++ b/themes/kale/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header>
     <section class="bio">
-        <a href="{{ .Site.BaseURL }}">
+        <a href="{{ "/" | relURL }}">
             <h1>Telly Diallo</h1>
         </a>
 
